# Murmur

./: .gitignore  .mcp.json  .swiftlint.yml  CLAUDE.md  Cargo.toml  DISCREPANCIES.md  Makefile  README.md  flake.nix  project.local.yml.template  project.yml
.claude/: project-spec.yml  settings.json  settings.local.json
.claude/commands/: ship.md  start.md  status.md
.claude/meta/: 000-voice-to-vision.md
.github/: ExportOptions.plist
.github/workflows/: ci-lint.yml  ci.yml  pages.yml  preview.yml  release.yml
Murmur/: Info.plist  LaunchScreen.storyboard  Murmur.entitlements  MurmurApp.swift  PrivacyInfo.xcprivacy
Murmur/Models/: Entry.swift  (+6 more)
MurmurTests/: MurmurTests.swift  SwipeableCardTests.swift
docs/: 2026-02-18-post-mvp-refactoring-plan.md  2026-02-19-credit-system-implementation-plan.md  credit-system.md  plan-wire-up-mvp.md
meta/: CANON.md  RECONCILIATION.md  ROADMAP.md  TESTFLIGHT_CHECKLIST.md  TESTFLIGHT_CI_SETUP.md  WORKFLOWS.md
mockups/: 01-home-ai.html  02-home-empty.html  03-voice-capture.html  04-pinned-views.html  05-todo-view.html  06-thought-detail.html  06b-thought-detail-expanded.html  06c-thought-transcript.html  07-ios-widget.html  08-settings.html  09-focus-todo.html  10-focus-insight.html  11-focus-dismissed.html  12-confirm-single.html  13-confirm-list.html  14-confirm-edit.html  15-void.html  16-recording-credits.html  17-confirm-credits.html  18-settings-minimal.html  19-topup.html  20-recording-live.html  21-home-sparse.html  22-processing.html  23-out-of-credits.html  24-error-mic-denied.html  25-error-api.html  26-empty-todo-view.html  27-confirm-single-item.html  28-delete-confirm.html  29-low-tokens.html  30-text-processing.html  31-text-confirm.html  32-onboarding-welcome.html  33-onboarding-mic-prompt.html  34-keyboard-open.html  35-success-saved.html  36-swipe-actions.html  37-empty-ideas.html  38-empty-reminders.html  (+6 more)
rust/: Cargo.toml
rust/crates/murmur-core/: Cargo.toml
rust/crates/murmur-core/src/: action.rs  agent.rs  db.rs  entry.rs  lib.rs  llm.rs  state.rs  update.rs
spikes/stt-whisper/: Cargo.toml  RESULTS.md
spikes/stt-whisper/src/: main.rs  noise.rs  sweep.rs
(+253 files in other folders)
